// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wizard /> should call navigate the previous step when click on précédent 1`] = `
.c0 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c0:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  max-height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  content: "";
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #f66663;
  border-color: #f66663;
  box-shadow: 0px 10px 20px rgba(246,102,99,0.26),0px 5px 7px rgba(246,102,99,0.35);
  opacity: 1;
  will-change: transform;
}

.c17:link,
.c17:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c17:not([disabled]):hover,
.c17:not([disabled]):active,
.c17:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #f99593;
  border-color: #f99593;
}

.c17[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c10 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 5rem 0 3.2rem 0;
}

.c19 {
  width: 3rem;
  margin-left: 1rem;
}

.c6 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 28rem;
  padding: 6rem 4rem 4rem 4rem;
  border-radius: 0.6rem 0 0 0.6rem;
}

.c7 {
  margin: 2rem 0;
  font-weight: 600;
}

.c9 {
  display: none;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #9298af;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c11 + .c11 {
  margin-top: 1.6rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4d73b8;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c11 + .c11 {
  margin-top: 1.6rem;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.8rem;
  height: 2.8rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #9298af;
  background-color: #e4e8ef;
  border-radius: 49%;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.8rem;
  height: 2.8rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #7994d4;
  border-radius: 49%;
}

.c1 {
  padding: 0 0 0 28rem;
  overflow: visible;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 4rem;
  padding-bottom: 1.6rem;
  border-bottom: 1px solid #bbcadf;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0;
  padding-bottom: 0;
}

.c3 {
  margin: 0;
}

@media print {
  .c0:before {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c5 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {

}

@media print {

}

@media (max-width:600px) {

}

@media (max-width:600px) {

}

@media print {

}

@media (max-width:600px) {
  .c17 {
    font-size: 1.4rem;
  }
}

@media print {
  .c17 {
    display: none;
  }
}

@media (max-width:600px) {
  .c17 {
    padding: 0 3rem;
  }
}

@media (max-width:980px) {
  .c18 + .c18 {
    margin-top: 1.6rem;
  }
}

@media (max-width:980px) {
  .c16 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media print {
  .c16 {
    display: none;
  }
}

@media (max-width:980px) {
  .c6 {
    position: relative;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    width: 100%;
    margin: 0;
    padding: 1.6rem 1rem;
    border-radius: 0.6rem;
  }
}

@media print {
  .c6 {
    display: none;
  }
}

@media (max-width:980px) {
  .c7 {
    margin: 0;
  }
}

@media (max-width:980px) {
  .c8 {
    display: none;
  }
}

@media (max-width:980px) {
  .c9 {
    display: inline-block;
  }
}

@media (max-width:980px) {
  .c14 {
    display: none;
  }

  .c11 + .c11 {
    margin-top: 0;
  }
}

@media (max-width:980px) {
  .c12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .c11 + .c11 {
    margin-top: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    padding: 0;
  }
}

@media print {
  .c1 {
    border: 0;
  }
}

@media (max-width:980px) {
  .c2 {
    margin-bottom: 1.6rem;
    padding: 1.6rem 0 1rem 0;
    border-bottom: 0;
  }
}

@media (max-width:980px) {
  .c4 {
    margin-bottom: 1.6rem;
    padding: 1.6rem 0 1rem 0;
    border-bottom: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <form
      class="c1"
    >
      <div
        class="c2"
      >
        <h1
          class="c3"
        >
          test
        </h1>
        <div
          class="c4"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <small />
        </div>
      </div>
      <div
        class="c5 c6"
      >
        <span
          class="c7"
        >
          Étape
          <span
            class="c8"
          >
            s
          </span>
          <span
            class="c9"
          >
             
            1/2
          </span>
        </span>
        <ol
          class="c10"
        >
          <li
            aria-live="polite"
            class="c11 c12"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="c13"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="c11 c14"
          >
            <span
              class="c15"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="c16"
      >
        <button
          class="c17 c18 "
        >
          Commencer
          <svg
            aria-hidden="true"
            class="c19"
            fill="none"
            viewBox="0 0 28 15"
          >
            <path
              d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should handle initialState.stepIndex 1`] = `
.c0 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c0:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  max-height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  content: "";
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 20px rgba(121,148,212,0.26),0px 5px 7px rgba(121,148,212,0.35);
  opacity: 1;
  will-change: transform;
}

.c17:link,
.c17:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c17:not([disabled]):hover,
.c17:not([disabled]):active,
.c17:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c17[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 3rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
  will-change: transform;
}

.c19:link,
.c19:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c19:not([disabled]):hover,
.c19:not([disabled]):active,
.c19:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c19[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c10 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 5rem 0 3.2rem 0;
}

.c6 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 28rem;
  padding: 6rem 4rem 4rem 4rem;
  border-radius: 0.6rem 0 0 0.6rem;
}

.c7 {
  margin: 2rem 0;
  font-weight: 600;
}

.c9 {
  display: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #9298af;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c11 + .c11 {
  margin-top: 1.6rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4d73b8;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c11 + .c11 {
  margin-top: 1.6rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.8rem;
  height: 2.8rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #9298af;
  background-color: #e4e8ef;
  border-radius: 49%;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.8rem;
  height: 2.8rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #7994d4;
  border-radius: 49%;
}

.c1 {
  padding: 0 0 0 28rem;
  overflow: visible;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 4rem;
  padding-bottom: 1.6rem;
  border-bottom: 1px solid #bbcadf;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0;
  padding-bottom: 0;
}

.c3 {
  margin: 0;
}

@media print {
  .c0:before {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c5 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c17 {
    font-size: 1.4rem;
  }
}

@media print {
  .c17 {
    display: none;
  }
}

@media (max-width:600px) {
  .c17 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c19 {
    font-size: 1.4rem;
  }
}

@media print {
  .c19 {
    display: none;
  }
}

@media (max-width:980px) {
  .c18 + .c18 {
    margin-top: 1.6rem;
  }
}

@media (max-width:980px) {
  .c16 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media print {
  .c16 {
    display: none;
  }
}

@media (max-width:980px) {
  .c6 {
    position: relative;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    width: 100%;
    margin: 0;
    padding: 1.6rem 1rem;
    border-radius: 0.6rem;
  }
}

@media print {
  .c6 {
    display: none;
  }
}

@media (max-width:980px) {
  .c7 {
    margin: 0;
  }
}

@media (max-width:980px) {
  .c8 {
    display: none;
  }
}

@media (max-width:980px) {
  .c9 {
    display: inline-block;
  }
}

@media (max-width:980px) {
  .c12 {
    display: none;
  }

  .c11 + .c11 {
    margin-top: 0;
  }
}

@media (max-width:980px) {
  .c14 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .c11 + .c11 {
    margin-top: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    padding: 0;
  }
}

@media print {
  .c1 {
    border: 0;
  }
}

@media (max-width:980px) {
  .c2 {
    margin-bottom: 1.6rem;
    padding: 1.6rem 0 1rem 0;
    border-bottom: 0;
  }
}

@media (max-width:980px) {
  .c4 {
    margin-bottom: 1.6rem;
    padding: 1.6rem 0 1rem 0;
    border-bottom: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <form
      class="c1"
    >
      <div
        class="c2"
      >
        <h1
          class="c3"
        >
          test
        </h1>
        <div
          class="c4"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <small />
        </div>
      </div>
      <div
        class="c5 c6"
      >
        <span
          class="c7"
        >
          Étape
          <span
            class="c8"
          >
            s
          </span>
          <span
            class="c9"
          >
             
            2/2
          </span>
        </span>
        <ol
          class="c10"
        >
          <li
            class="c11 c12"
          >
            <span
              class="c13"
            >
              1
            </span>
            First Step
          </li>
          <li
            aria-live="polite"
            class="c11 c14"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="c15"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Deuxieme Etape
      </p>
      <label
        for="cb"
      >
        etape facultative
        <input
          id="cb"
          name="fooStep"
          type="checkbox"
          value=""
        />
      </label>
      <div
        class="c16"
      >
        <button
          class="c17 c18 "
          type="button"
        >
          Imprimer le résultat
        </button>
        <button
          class="c19 c18 "
          type="button"
        >
          Précédent
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should handle initialValues 1`] = `
.c0 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c0:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  max-height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  content: "";
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #f66663;
  border-color: #f66663;
  box-shadow: 0px 10px 20px rgba(246,102,99,0.26),0px 5px 7px rgba(246,102,99,0.35);
  opacity: 1;
  will-change: transform;
}

.c17:link,
.c17:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c17:not([disabled]):hover,
.c17:not([disabled]):active,
.c17:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #f99593;
  border-color: #f99593;
}

.c17[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c10 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 5rem 0 3.2rem 0;
}

.c19 {
  width: 3rem;
  margin-left: 1rem;
}

.c6 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 28rem;
  padding: 6rem 4rem 4rem 4rem;
  border-radius: 0.6rem 0 0 0.6rem;
}

.c7 {
  margin: 2rem 0;
  font-weight: 600;
}

.c9 {
  display: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4d73b8;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c11 + .c11 {
  margin-top: 1.6rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #9298af;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c11 + .c11 {
  margin-top: 1.6rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.8rem;
  height: 2.8rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #7994d4;
  border-radius: 49%;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.8rem;
  height: 2.8rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #9298af;
  background-color: #e4e8ef;
  border-radius: 49%;
}

.c1 {
  padding: 0 0 0 28rem;
  overflow: visible;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 4rem;
  padding-bottom: 1.6rem;
  border-bottom: 1px solid #bbcadf;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0;
  padding-bottom: 0;
}

.c3 {
  margin: 0;
}

@media print {
  .c0:before {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c5 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c17 {
    font-size: 1.4rem;
  }
}

@media print {
  .c17 {
    display: none;
  }
}

@media (max-width:600px) {
  .c17 {
    padding: 0 3rem;
  }
}

@media (max-width:980px) {
  .c18 + .c18 {
    margin-top: 1.6rem;
  }
}

@media (max-width:980px) {
  .c16 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media print {
  .c16 {
    display: none;
  }
}

@media (max-width:980px) {
  .c6 {
    position: relative;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    width: 100%;
    margin: 0;
    padding: 1.6rem 1rem;
    border-radius: 0.6rem;
  }
}

@media print {
  .c6 {
    display: none;
  }
}

@media (max-width:980px) {
  .c7 {
    margin: 0;
  }
}

@media (max-width:980px) {
  .c8 {
    display: none;
  }
}

@media (max-width:980px) {
  .c9 {
    display: inline-block;
  }
}

@media (max-width:980px) {
  .c12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .c11 + .c11 {
    margin-top: 0;
  }
}

@media (max-width:980px) {
  .c14 {
    display: none;
  }

  .c11 + .c11 {
    margin-top: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    padding: 0;
  }
}

@media print {
  .c1 {
    border: 0;
  }
}

@media (max-width:980px) {
  .c2 {
    margin-bottom: 1.6rem;
    padding: 1.6rem 0 1rem 0;
    border-bottom: 0;
  }
}

@media (max-width:980px) {
  .c4 {
    margin-bottom: 1.6rem;
    padding: 1.6rem 0 1rem 0;
    border-bottom: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <form
      class="c1"
    >
      <div
        class="c2"
      >
        <h1
          class="c3"
        >
          test
        </h1>
        <div
          class="c4"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <small />
        </div>
      </div>
      <div
        class="c5 c6"
      >
        <span
          class="c7"
        >
          Étape
          <span
            class="c8"
          >
            s
          </span>
          <span
            class="c9"
          >
             
            1/3
          </span>
        </span>
        <ol
          class="c10"
        >
          <li
            aria-live="polite"
            class="c11 c12"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="c13"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="c11 c14"
          >
            <span
              class="c15"
            >
              2
            </span>
            Second Step
          </li>
          <li
            class="c11 c14"
          >
            <span
              class="c15"
            >
              3
            </span>
            Optional Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="c16"
      >
        <button
          class="c17 c18 "
        >
          Commencer
          <svg
            aria-hidden="true"
            class="c19"
            fill="none"
            viewBox="0 0 28 15"
          >
            <path
              d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should inject rules component 1`] = `
.c0 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c0:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  max-height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  content: "";
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #f66663;
  border-color: #f66663;
  box-shadow: 0px 10px 20px rgba(246,102,99,0.26),0px 5px 7px rgba(246,102,99,0.35);
  opacity: 1;
  will-change: transform;
}

.c17:link,
.c17:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c17:not([disabled]):hover,
.c17:not([disabled]):active,
.c17:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #f99593;
  border-color: #f99593;
}

.c17[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c10 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 5rem 0 3.2rem 0;
}

.c19 {
  width: 3rem;
  margin-left: 1rem;
}

.c6 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 28rem;
  padding: 6rem 4rem 4rem 4rem;
  border-radius: 0.6rem 0 0 0.6rem;
}

.c7 {
  margin: 2rem 0;
  font-weight: 600;
}

.c9 {
  display: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4d73b8;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c11 + .c11 {
  margin-top: 1.6rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #9298af;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c11 + .c11 {
  margin-top: 1.6rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.8rem;
  height: 2.8rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #7994d4;
  border-radius: 49%;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.8rem;
  height: 2.8rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #9298af;
  background-color: #e4e8ef;
  border-radius: 49%;
}

.c1 {
  padding: 0 0 0 28rem;
  overflow: visible;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 4rem;
  padding-bottom: 1.6rem;
  border-bottom: 1px solid #bbcadf;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0;
  padding-bottom: 0;
}

.c3 {
  margin: 0;
}

@media print {
  .c0:before {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c5 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c17 {
    font-size: 1.4rem;
  }
}

@media print {
  .c17 {
    display: none;
  }
}

@media (max-width:600px) {
  .c17 {
    padding: 0 3rem;
  }
}

@media (max-width:980px) {
  .c18 + .c18 {
    margin-top: 1.6rem;
  }
}

@media (max-width:980px) {
  .c16 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media print {
  .c16 {
    display: none;
  }
}

@media (max-width:980px) {
  .c6 {
    position: relative;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    width: 100%;
    margin: 0;
    padding: 1.6rem 1rem;
    border-radius: 0.6rem;
  }
}

@media print {
  .c6 {
    display: none;
  }
}

@media (max-width:980px) {
  .c7 {
    margin: 0;
  }
}

@media (max-width:980px) {
  .c8 {
    display: none;
  }
}

@media (max-width:980px) {
  .c9 {
    display: inline-block;
  }
}

@media (max-width:980px) {
  .c12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .c11 + .c11 {
    margin-top: 0;
  }
}

@media (max-width:980px) {
  .c14 {
    display: none;
  }

  .c11 + .c11 {
    margin-top: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    padding: 0;
  }
}

@media print {
  .c1 {
    border: 0;
  }
}

@media (max-width:980px) {
  .c2 {
    margin-bottom: 1.6rem;
    padding: 1.6rem 0 1rem 0;
    border-bottom: 0;
  }
}

@media (max-width:980px) {
  .c4 {
    margin-bottom: 1.6rem;
    padding: 1.6rem 0 1rem 0;
    border-bottom: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <form
      class="c1"
    >
      <p>
        Rule
      </p>
      <div
        class="c2"
      >
        <h1
          class="c3"
        >
          test
        </h1>
        <div
          class="c4"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <small />
        </div>
      </div>
      <div
        class="c5 c6"
      >
        <span
          class="c7"
        >
          Étape
          <span
            class="c8"
          >
            s
          </span>
          <span
            class="c9"
          >
             
            1/2
          </span>
        </span>
        <ol
          class="c10"
        >
          <li
            aria-live="polite"
            class="c11 c12"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="c13"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="c11 c14"
          >
            <span
              class="c15"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="c16"
      >
        <button
          class="c17 c18 "
        >
          Commencer
          <svg
            aria-hidden="true"
            class="c19"
            fill="none"
            viewBox="0 0 28 15"
          >
            <path
              d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should navigate to the second step when click on Commencer 1`] = `
.c0 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c0:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  max-height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  content: "";
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 20px rgba(121,148,212,0.26),0px 5px 7px rgba(121,148,212,0.35);
  opacity: 1;
  will-change: transform;
}

.c17:link,
.c17:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c17:not([disabled]):hover,
.c17:not([disabled]):active,
.c17:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c17[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 3rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
  will-change: transform;
}

.c19:link,
.c19:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c19:not([disabled]):hover,
.c19:not([disabled]):active,
.c19:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c19[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c10 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 5rem 0 3.2rem 0;
}

.c6 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 28rem;
  padding: 6rem 4rem 4rem 4rem;
  border-radius: 0.6rem 0 0 0.6rem;
}

.c7 {
  margin: 2rem 0;
  font-weight: 600;
}

.c9 {
  display: none;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4d73b8;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c11 + .c11 {
  margin-top: 1.6rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #9298af;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c11 + .c11 {
  margin-top: 1.6rem;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.8rem;
  height: 2.8rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #7994d4;
  border-radius: 49%;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.8rem;
  height: 2.8rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #9298af;
  background-color: #e4e8ef;
  border-radius: 49%;
}

.c1 {
  padding: 0 0 0 28rem;
  overflow: visible;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 4rem;
  padding-bottom: 1.6rem;
  border-bottom: 1px solid #bbcadf;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0;
  padding-bottom: 0;
}

.c3 {
  margin: 0;
}

@media print {
  .c0:before {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c5 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {

}

@media print {

}

@media (max-width:600px) {

}

@media (max-width:600px) {
  .c17 {
    font-size: 1.4rem;
  }
}

@media print {
  .c17 {
    display: none;
  }
}

@media (max-width:600px) {
  .c17 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c19 {
    font-size: 1.4rem;
  }
}

@media print {
  .c19 {
    display: none;
  }
}

@media (max-width:980px) {
  .c18 + .c18 {
    margin-top: 1.6rem;
  }
}

@media (max-width:980px) {
  .c16 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media print {
  .c16 {
    display: none;
  }
}

@media (max-width:980px) {
  .c6 {
    position: relative;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    width: 100%;
    margin: 0;
    padding: 1.6rem 1rem;
    border-radius: 0.6rem;
  }
}

@media print {
  .c6 {
    display: none;
  }
}

@media (max-width:980px) {
  .c7 {
    margin: 0;
  }
}

@media (max-width:980px) {
  .c8 {
    display: none;
  }
}

@media (max-width:980px) {
  .c9 {
    display: inline-block;
  }
}

@media (max-width:980px) {
  .c14 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .c11 + .c11 {
    margin-top: 0;
  }
}

@media (max-width:980px) {
  .c12 {
    display: none;
  }

  .c11 + .c11 {
    margin-top: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    padding: 0;
  }
}

@media print {
  .c1 {
    border: 0;
  }
}

@media (max-width:980px) {
  .c2 {
    margin-bottom: 1.6rem;
    padding: 1.6rem 0 1rem 0;
    border-bottom: 0;
  }
}

@media (max-width:980px) {
  .c4 {
    margin-bottom: 1.6rem;
    padding: 1.6rem 0 1rem 0;
    border-bottom: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <form
      class="c1"
    >
      <div
        class="c2"
      >
        <h1
          class="c3"
        >
          test
        </h1>
        <div
          class="c4"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <small />
        </div>
      </div>
      <div
        class="c5 c6"
      >
        <span
          class="c7"
        >
          Étape
          <span
            class="c8"
          >
            s
          </span>
          <span
            class="c9"
          >
             
            2/2
          </span>
        </span>
        <ol
          class="c10"
        >
          <li
            class="c11 c12"
          >
            <span
              class="c13"
            >
              1
            </span>
            First Step
          </li>
          <li
            aria-live="polite"
            class="c11 c14"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="c15"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Deuxieme Etape
      </p>
      <label
        for="cb"
      >
        etape facultative
        <input
          id="cb"
          name="fooStep"
          type="checkbox"
          value=""
        />
      </label>
      <div
        class="c16"
      >
        <button
          class="c17 c18 "
          type="button"
        >
          Imprimer le résultat
        </button>
        <button
          class="c19 c18 "
          type="button"
        >
          Précédent
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should render a step 1`] = `
.c0 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c0:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  max-height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  content: "";
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #f66663;
  border-color: #f66663;
  box-shadow: 0px 10px 20px rgba(246,102,99,0.26),0px 5px 7px rgba(246,102,99,0.35);
  opacity: 1;
  will-change: transform;
}

.c17:link,
.c17:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c17:not([disabled]):hover,
.c17:not([disabled]):active,
.c17:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #f99593;
  border-color: #f99593;
}

.c17[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c10 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 5rem 0 3.2rem 0;
}

.c19 {
  width: 3rem;
  margin-left: 1rem;
}

.c6 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 28rem;
  padding: 6rem 4rem 4rem 4rem;
  border-radius: 0.6rem 0 0 0.6rem;
}

.c7 {
  margin: 2rem 0;
  font-weight: 600;
}

.c9 {
  display: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4d73b8;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c11 + .c11 {
  margin-top: 1.6rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #9298af;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.c11 + .c11 {
  margin-top: 1.6rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.8rem;
  height: 2.8rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #fff;
  background-color: #7994d4;
  border-radius: 49%;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.8rem;
  height: 2.8rem;
  margin: 0.4rem 1rem;
  margin-left: 0;
  color: #9298af;
  background-color: #e4e8ef;
  border-radius: 49%;
}

.c1 {
  padding: 0 0 0 28rem;
  overflow: visible;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 4rem;
  padding-bottom: 1.6rem;
  border-bottom: 1px solid #bbcadf;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0;
  padding-bottom: 0;
}

.c3 {
  margin: 0;
}

@media print {
  .c0:before {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c5 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c17 {
    font-size: 1.4rem;
  }
}

@media print {
  .c17 {
    display: none;
  }
}

@media (max-width:600px) {
  .c17 {
    padding: 0 3rem;
  }
}

@media (max-width:980px) {
  .c18 + .c18 {
    margin-top: 1.6rem;
  }
}

@media (max-width:980px) {
  .c16 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media print {
  .c16 {
    display: none;
  }
}

@media (max-width:980px) {
  .c6 {
    position: relative;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    width: 100%;
    margin: 0;
    padding: 1.6rem 1rem;
    border-radius: 0.6rem;
  }
}

@media print {
  .c6 {
    display: none;
  }
}

@media (max-width:980px) {
  .c7 {
    margin: 0;
  }
}

@media (max-width:980px) {
  .c8 {
    display: none;
  }
}

@media (max-width:980px) {
  .c9 {
    display: inline-block;
  }
}

@media (max-width:980px) {
  .c12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .c11 + .c11 {
    margin-top: 0;
  }
}

@media (max-width:980px) {
  .c14 {
    display: none;
  }

  .c11 + .c11 {
    margin-top: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    padding: 0;
  }
}

@media print {
  .c1 {
    border: 0;
  }
}

@media (max-width:980px) {
  .c2 {
    margin-bottom: 1.6rem;
    padding: 1.6rem 0 1rem 0;
    border-bottom: 0;
  }
}

@media (max-width:980px) {
  .c4 {
    margin-bottom: 1.6rem;
    padding: 1.6rem 0 1rem 0;
    border-bottom: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <form
      class="c1"
    >
      <div
        class="c2"
      >
        <h1
          class="c3"
        >
          test
        </h1>
        <div
          class="c4"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <small />
        </div>
      </div>
      <div
        class="c5 c6"
      >
        <span
          class="c7"
        >
          Étape
          <span
            class="c8"
          >
            s
          </span>
          <span
            class="c9"
          >
             
            1/2
          </span>
        </span>
        <ol
          class="c10"
        >
          <li
            aria-live="polite"
            class="c11 c12"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="c13"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="c11 c14"
          >
            <span
              class="c15"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="c16"
      >
        <button
          class="c17 c18 "
        >
          Commencer
          <svg
            aria-hidden="true"
            class="c19"
            fill="none"
            viewBox="0 0 28 15"
          >
            <path
              d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;
